<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.echols.studentschedule.fragments.HomeFragment">

    <TextView
        android:id="@+id/labelCurrentTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:text="@string/home_current_term"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCurrentTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_small"
        android:text="@string/home_current_term_none"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCurrentTerm" />

    <TextView
        android:id="@+id/labelCurrentCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_large"
        android:text="@string/home_current_courses"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentTerm" />

    <TextView
        android:id="@+id/textCurrentCourses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_small"
        android:text="@string/home_current_term_none"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCurrentCourses" />

    <View
        android:id="@+id/horizontal_divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/text_margin_large"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentCourses" />

    <Button
        android:id="@+id/buttonGenerateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_large"
        android:text="@string/home_generate_dummy_data"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_divider1" />

</android.support.constraint.ConstraintLayout>
