<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            xmlns:app="http://schemas.android.com/apk/res-auto"
                                            xmlns:tools="http://schemas.android.com/tools"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            tools:context="com.example.echols.studentschedule.fragments.CourseInfoFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextTermTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_title"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextTermDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_description"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/labelTermStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_small"
            android:text="@string/label_start_date"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            app:layout_constraintLeft_toLeftOf="@+id/buttonTermStart"
            app:layout_constraintRight_toRightOf="@+id/buttonTermStart"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextInputLayout"/>

        <Button
            android:id="@+id/buttonTermStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_tiny"
            android:text="@string/placeholder_date"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonTermEnd"
            app:layout_constraintTop_toBottomOf="@+id/labelTermStart"/>

        <Switch
            android:id="@+id/startSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_tiny"
            android:switchPadding="@dimen/text_margin_tiny"
            android:text="@string/label_remind_me"
            app:layout_constraintLeft_toLeftOf="@+id/buttonTermStart"
            app:layout_constraintRight_toRightOf="@+id/buttonTermStart"
            app:layout_constraintTop_toBottomOf="@+id/buttonTermStart"/>

        <TextView
            android:id="@+id/labelTermEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_end_date"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            app:layout_constraintLeft_toLeftOf="@+id/buttonTermEnd"
            app:layout_constraintRight_toRightOf="@+id/buttonTermEnd"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelTermStart"/>

        <Button
            android:id="@+id/buttonTermEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_tiny"
            android:text="@string/placeholder_date"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintLeft_toRightOf="@+id/buttonTermStart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTermEnd"/>

        <Switch
            android:id="@+id/endSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_tiny"
            android:switchPadding="@dimen/text_margin_tiny"
            android:text="@string/label_remind_me"
            app:layout_constraintLeft_toLeftOf="@+id/buttonTermEnd"
            app:layout_constraintRight_toRightOf="@+id/buttonTermEnd"
            app:layout_constraintTop_toBottomOf="@+id/buttonTermEnd"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>