<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.echols.studentschedule.fragments.CourseInfoFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_small"
            android:layout_marginTop="@dimen/text_margin_small"
            android:text="@string/label_term"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textViewTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_small"
            android:text="@string/label_term"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelTerm"
            app:layout_constraintLeft_toRightOf="@+id/labelTerm"/>

        <View
            android:id="@+id/horizontal_divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/text_margin_small"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelTerm"/>

        <Spinner
            android:id="@+id/courseStatusSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin_small"
            android:layout_marginStart="@dimen/text_margin_small"
            android:layout_marginTop="@dimen/text_margin_small"
            android:entries="@array/course_status_array"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_divider1"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/text_margin_small"
            android:layout_marginStart="@dimen/text_margin_small"
            android:layout_marginTop="@dimen/text_margin_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseStatusSpinner">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextCourseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_title"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/text_margin_small"
            android:layout_marginStart="@dimen/text_margin_small"
            android:layout_marginTop="@dimen/text_margin_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextCourseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_description"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/labelCourseStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_small"
            android:text="@string/label_start_date"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            app:layout_constraintLeft_toLeftOf="@+id/buttonCourseStart"
            app:layout_constraintRight_toRightOf="@+id/buttonCourseStart"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextInputLayout"/>

        <Button
            android:id="@+id/buttonCourseStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_tiny"
            android:text="@string/placeholder_date"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonCourseEnd"
            app:layout_constraintTop_toBottomOf="@+id/labelCourseStart"/>

        <Switch
            android:id="@+id/startSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_tiny"
            android:switchPadding="@dimen/text_margin_tiny"
            android:text="@string/label_remind_me"
            app:layout_constraintLeft_toLeftOf="@+id/buttonCourseStart"
            app:layout_constraintRight_toRightOf="@+id/buttonCourseStart"
            app:layout_constraintTop_toBottomOf="@+id/buttonCourseStart"/>

        <TextView
            android:id="@+id/labelCourseEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_end_date"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            app:layout_constraintBaseline_toBaselineOf="@+id/labelCourseStart"
            app:layout_constraintLeft_toLeftOf="@+id/buttonCourseEnd"
            app:layout_constraintRight_toRightOf="@+id/buttonCourseEnd"/>

        <Button
            android:id="@+id/buttonCourseEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_tiny"
            android:text="@string/placeholder_date"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintLeft_toRightOf="@+id/buttonCourseStart"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelCourseEnd"/>

        <Switch
            android:id="@+id/endSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_tiny"
            android:switchPadding="@dimen/text_margin_tiny"
            android:text="@string/label_remind_me"
            app:layout_constraintLeft_toLeftOf="@+id/buttonCourseEnd"
            app:layout_constraintRight_toRightOf="@+id/buttonCourseEnd"
            app:layout_constraintTop_toBottomOf="@+id/buttonCourseEnd"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>